--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,19 +1,14 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+@import url('./base/reset.css');
+@import url('./base/common.css');
+
+
+@import url('./layout/header.css');
+
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-family: "Montserrat Alternates", sans-serif;
   font-weight: 400;
-
+  
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
 
