--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,42 @@
 <header class="header">
-    
+  <nav class="nav">
+    <div class="container">
+      <a href="" class="logo">
+        <div class="logo__container">
+          <svg class="logo__icon" width="40" height="38">
+            <use href="/img/symbol-defs.svg#logo"></use>
+          </svg>
+          <div class="logo__text">
+            <p class="logo__coding">Coding</p>
+            <p class="logo__magic">Magic</p>
+          </div>
+        </div>
+      </a>
+
+      <ul class="nav__list">
+        <li class="nav__item interactive">
+          <a href=""
+            >Інтерактив
+            <!-- <svg class="logo__icon" width="5" height="9">
+              <use href="/img/symbol-defs.svg#icon-arrow"></use>
+            </svg> -->
+            <img src="./img/arrow.png" alt="" class="arrow" />
+          </a>
+        </li>
+        <li class="nav__item"><a href="">Наша команда</a></li>
+        <li class="nav__item"><a href="">Контакти</a></li>
+      </ul>
+
+      <!-- <svg class="day__mode">
+        <use href="/img/symbol-defs.svg#"></use>
+      </svg>
+      <svg class="night__mode">
+        <use href="/img/symbol-defs.svg#"></use>
+      </svg> -->
+
+      <img width="40" height="20" src="./img/light-mode.png" alt="" />
+
+      <p class="greeting">Вітаємо, <span id="user__name">User</span>!</p>
+    </div>
+  </nav>
 </header>
