--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -1,4 +1,66 @@
 .header {
-width: 100%;
-height: 80px;
+  width: 100%;
+  height: 80px;
+}
+
+.header .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 23px;
+  padding-bottom: 23px;
+}
+
+.logo {
+}
+
+.logo__container {
+  display: flex;
+
+  align-items: center;
+  margin-right: 81px;
+}
+
+.logo__icon {
+  margin-right: 12px;
+}
+
+.logo__coding {
+  color: #000;
+  font-size: 12px;
+}
+
+.logo__magic {
+  color: #000;
+  font-family: Sacramento;
+  font-size: 12px;
+  margin-left: 12px;
+}
+
+.nav__list {
+  display: flex;
+
+  gap: 50px;
+  margin-right: 361px;
+}
+
+.nav__item {
+  color: #000;
+  font-size: 12px;
+}
+
+.interactive {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* flex-shrink: 0; */
+}
+
+.greeting {
+    display: flex;
+  color: #000;
+  text-align: right;
+  font-size: 12px;
+
+  margin-left: 51px;
 }
