--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -24,5 +24,15 @@ hr {
   width: 536px;
   height: 0px;
   color: #000;
+
   margin-top: 36px;
+  margin-bottom: 36px;
+}
+
+.title {
+  color: #000;
+  font-size: 16px;
+  text-align: center;
+
+  margin-bottom: 36px;
 }
