--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,8 +3,8 @@
 
 
 @import url('./layout/header.css');
-/* @import url('./layout/date.css');
-@import url('./layout/guess.css');
+ @import url('./layout/date.css');
+/*@import url('./layout/guess.css');
 @import url('./layout/rsp.css');
 @import url('./layout/calculator.css');
 @import url('./layout/time-calculator.css');
@@ -29,3 +29,11 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+
+
+
+
+
+
+
