--- a/src/partials/date.html
+++ b/src/partials/date.html
@@ -7,7 +7,6 @@
         type="number"
         placeholder="Введіть рік народження"
         data-min-length="4"
-        data-inputYear
       />
 
       <button type="button" class="date__btn">
@@ -17,6 +16,6 @@
       </button>
     </div>
 
-    <p class="date__text" data-remove>Введіть рік</p>
+    <p class="date__text">Введіть рік</p>
   </div>
 </section>
