--- a/src/css/layout/date.css
+++ b/src/css/layout/date.css
@@ -21,18 +21,14 @@
   display: inline-flex;
   padding: 10px;
 
-  /* padding: 10px 45px 10px 10px; */
   align-items: flex-start;
   gap: 10px;
   border-radius: 20px;
-  background: #d7d7d7;
-  font-size: 12px;
-  width: 215px;
+  background-color: #d7d7d7;
 
-  &::placeholder {
-    color: #7e7e7e;
-    font-size: 12px;
-  }
+  width: 215px;
+  color: #7e7e7e;
+  font-size: 12px;
 }
 
 .date__icon {
@@ -49,10 +45,7 @@
 
   border-radius: 0px 20px 20px 0px;
   background: #000;
-  /* display: inline-flex; */
   padding: 8px 10px;
-  /* align-items: flex-start; */
-  /* gap: 10px; */
 }
 
 .date__text {
