--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 @import url('./base/reset.css');
 @import url('./base/common.css');
 
-@import url('./layout/modal.css');
+/* @import url('./layout/modal.css'); */
 @import url('./layout/header.css');
 @import url('./layout/date.css');
 /*@import url('./layout/guess.css');
