--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -2,22 +2,19 @@ main {
   background-image: url('/img/main-background-image.png');
   background-size: cover;
   background-color: #eee;
-  /* height: 3500px; */
 }
 
 .container {
   width: 1090px;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: var(--main-color);
 }
 
 h1 {
-  color: #000;
+  color: var(--secondary-color);
   font-size: 24px;
   font-weight: 400;
   text-align: center;
-
-  margin-top: 36px;
 }
 
 hr {
@@ -30,7 +27,7 @@ hr {
 }
 
 .title {
-  color: #000;
+  color: var(--secondary-color);
   font-size: 16px;
   text-align: center;
 
