--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,12 +19,19 @@
   font-family: 'Montserrat Alternates', sans-serif;
   font-weight: 400;
 
-  color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
+
+  --main-color: #fff;
+  --secondary-color: #000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+.dark-theme {
+  --main-color: #000;
+  --secondary-color: #fff;
 }
