--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <a href="" class="logo">
       <div class="logo__container footer__logo">
         <svg class="logo__icon footer__logo-icon" width="40" height="38">
-          <use href="/img/symbol-defs.svg#logo"></use>
+          <use href="/img/icons/symbol-defs.svg#logo"></use>
         </svg>
         <div class="logo__text">
           <p class="logo__coding footer__logo-coding">Coding</p>
