--- a/src/partials/time-calculator.html
+++ b/src/partials/time-calculator.html
@@ -11,11 +11,13 @@
 
       <button type="button" id="convert" class="date__btn">
         <svg class="time__calculator__icon">
-          <use href="./img/symbol-defs.svg#icon-dandruff"></use>
+          <use href="./img/icons/symbol-defs.svg#icon-dandruff"></use>
         </svg>
       </button>
     </div>
     <span class="dashed__separator"></span>
-    <p id="time-calculator-result" class="time__calculator__text result__tc">Результат</p>
+    <p id="time-calculator-result" class="time__calculator__text result__tc">
+      Результат
+    </p>
   </div>
 </section>
