--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <a href="" class="logo">
         <div class="logo__container">
           <svg class="logo__icon" width="40" height="38">
-            <use href="/img/symbol-defs.svg#logo"></use>
+            <use href="/img/icons/symbol-defs.svg#logo"></use>
           </svg>
           <div class="logo__text">
             <p class="logo__coding">Coding</p>
@@ -18,9 +18,8 @@
           <a href="" class="interactive"
             >Інтерактив
             <svg class="arrow" width="10" height="14">
-              <use href="/img/symbol-defs.svg#icon-arrow"></use>
+              <use href="/img/icons/symbol-defs.svg#icon-arrow"></use>
             </svg>
-            <!-- <img src="/img/arrow.svg" alt="" class="arrow" /> -->
           </a>
 
           <ul class="submenu__list">
@@ -39,7 +38,12 @@
         <li class="nav__item"><a href="">Контакти</a></li>
       </ul>
 
-      <img src="/img/light-theme.svg" alt="" class="switch-theme" id="icon" />
+      <img
+        src="/img/icons/light-theme.svg"
+        alt=""
+        class="switch-theme"
+        id="icon"
+      />
 
       <p class="greeting">Вітаємо, <span id="user__name">User</span>!</p>
     </div>
