--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,7 @@
 /* @import url('./layout/football.css'); */
 /* @import url('./layout/enter-numbers.css'); */
 @import url('./layout/our-team.css');
-/* @import url('./layout/scientists.css');  */
+@import url('./layout/scientists.css');
 @import url('./layout/footer.css');
 
 :root {
