--- a/src/css/layout/our-team.css
+++ b/src/css/layout/our-team.css
@@ -17,12 +17,12 @@
   margin-bottom: 20px;
 }
 .out-team__name {
-  color: #000;
+  color: var(--secondary-color);
   font-size: 14px;
 
   margin-bottom: 20px;
 }
 .our-team__information {
-  color: #000;
+  color: var(--secondary-color);
   font-size: 12px;
 }
