--- a/src/partials/calculator.html
+++ b/src/partials/calculator.html
@@ -1,6 +1,6 @@
-<div>
-  <h3 class="title">Калькулятор</h3>
-
+<section>
+  <h2 class="title">Калькулятор</h2>
+  <div class="calculator__container">
   <input type="number" id="first-number" placeholder="Введіть число" />
   <div class="calculator__operators">
     <input type="radio" class="calculator__operator" name="operator" id="addition" value="+" /><label
@@ -23,5 +23,6 @@
   </div>
   <input type="number" id="second-number" placeholder="Введіть число" />
   <button type="button" id="button-result" disabled>=</button>
-  <input class="calculator__result" id="calculator-result" placeholder="Результат"></input>
+  <p class="calculator__result" id="calculator-result" >Результат</p>
 </div>
+</section>
