--- a/src/partials/time-calculator.html
+++ b/src/partials/time-calculator.html
@@ -17,7 +17,7 @@
     </div>
     <span class="dashed__separator"></span>
     <p id="time-calculator-result" class="time__calculator__text result__tc">
-      Результат
+      Введіть число
     </p>
   </div>
 </section>
