--- a/src/partials/calculator.html
+++ b/src/partials/calculator.html
@@ -1,28 +1,28 @@
 <section>
   <h2 class="title">Калькулятор</h2>
   <div class="calculator__container">
-  <input type="number" id="first-number" placeholder="Введіть число" />
+  <input type="number" class="calculator__input" id="first-number" placeholder="Введіть число" />
   <div class="calculator__operators">
     <input type="radio" class="calculator__operator" name="operator" id="addition" value="+" /><label
       for="addition"
       required
-      >+
+      ><span>+</span>
     </label>
     <input type="radio" class="calculator__operator" name="operator" id="subtraction" value="-" /><label
       for="subtraction"
-      >-</label
+      ><span>-</span></label
     >
     <input type="radio" class="calculator__operator" name="operator" id="multiplication" value="*" /><label
       for="multiplication"
-      >*</label
+      ><span>*</span></label
     >
     <input type="radio" class="calculator__operator" name="operator" id="division" value="/" /><label
       for="division"
-      >/</label
+      ><span>/</span></label
     >
   </div>
-  <input type="number" id="second-number" placeholder="Введіть число" />
-  <button type="button" id="button-result" disabled>=</button>
+  <input type="number" class="calculator__input" id="second-number" placeholder="Введіть число" />
+  <button type="button" class="calculator__convert__btn" id="button-result" disabled><span>=</span></button>
   <p class="calculator__result" id="calculator-result" >Результат</p>
 </div>
 </section>
