--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -39,8 +39,8 @@
       </ul>
 
       <img
-        src="/img/icons/light-theme.svg"
-        alt=""
+        src="../img/icons/light-theme.svg"
+        alt="day mode"
         class="switch-theme"
         id="icon"
       />
