--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -39,7 +39,7 @@
       </ul>
 
       <img
-        src="../img/icons/light-theme.svg"
+        src="/img/icons/light-theme.svg"
         alt="day mode"
         class="switch-theme"
         id="icon"
