--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -28,9 +28,9 @@
         placeholder="Ваша ел. адреса..."
       />
       <button class="footer__btn">Підписатись</button>
+      <p class="footer__subtitle">
+        *Підписавшись, Ви зможете ортимувати інформаццію про новинки на сайті
+      </p>
     </div>
-    <!-- <p class="footer__subtitle">
-      Підписавшись, Ви зможете ортимувати інформаццію про новинки на сайті
-    </p> -->
   </div>
 </footer>
