--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,6 @@
 <!-- <button class="button" data-action="open-modal">Відкрити модалку</button> -->
 
-<div class="backdrop js-backdrop">
+<!-- <div class="backdrop js-backdrop">
   <div class="modal">
     <p class="modal__text backdown">
       Привіт! <br />
@@ -51,8 +51,8 @@
       </li>
     </ul>
 
-    <!-- <button type="button" class="button" data-action="close-modal">
+    <button type="button" class="button" data-action="close-modal">
       Закрити
-    </button> -->
+    </button>
   </div>
-</div>
+</div> -->
