--- a/src/partials/thank-modal.html
+++ b/src/partials/thank-modal.html
@@ -1,4 +1,4 @@
-<!-- <button class="button" data-action="open-modal">Відкрити модалку</button>
+<button class="button" data-action="open-modal">Відкрити модалку</button>
 
 <div class="backdrop js-backdrop">
   <div class="modal thank__modal">
@@ -35,4 +35,4 @@
       </li>
     </ul>
   </div>
-</div> -->
+</div>
