--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -1,7 +1,8 @@
 <section class="out-team__section" id="our-team">
   <h2 class="title">Наша команда</h2>
+
   <div class="swiper">
-    <ul class="out-team__list swiper-wrapper">
+    <ul class="out-team__item swiper-wrapper">
       <li class="out-team__item swiper-slide">
         <img src="./img/our-team.png" alt="" class="out-team__img" />
         <p class="out-team__name">Анастасія</p>
@@ -9,23 +10,23 @@
           Інформація про роботу, яку він/вона виконав/ла
         </p>
       </li>
-
-      <!-- <li class="out-team__item swiper-slide">
-        <img src="./img/out-team/our-team.png" alt="" class="out-team__img" />
+      <li class="out-team__item swiper-slide">
+        <img src="./img/our-team.png" alt="" class="out-team__img" />
         <p class="out-team__name">Олександра</p>
         <p class="our-team__information">
           Інформація про роботу, яку він/вона виконав/ла
         </p>
       </li>
-
       <li class="out-team__item swiper-slide">
-        <img src="./img/out-team/our-team.png" alt="" class="out-team__img" />
+        <img src="./img/our-team.png" alt="" class="out-team__img" />
         <p class="out-team__name">Сабіна</p>
         <p class="our-team__information">
           Інформація про роботу, яку він/вона виконав/ла
         </p>
-      </li> -->
+      </li>
     </ul>
     <div class="swiper-pagination"></div>
   </div>
+  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div>
 </section>
