--- a/src/css/layout/our-team.css
+++ b/src/css/layout/our-team.css
@@ -1,13 +1,11 @@
 .out-team__section {
-}
+  position: relative;
+  width: 906px;
 
-.out-team__list {
+  margin: 0 auto;
 }
 
 .out-team__item {
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
   text-align: center;
 }
 
@@ -26,3 +24,36 @@
   color: var(--secondary-color);
   font-size: 12px;
 }
+
+/* swiper */
+
+.swiper {
+  padding-bottom: 40px;
+}
+
+.swiper-pagination-bullet {
+  width: 18px;
+  height: 3.5px;
+  background-color: #d9d9d9;
+  border-radius: 5px;
+}
+
+.swiper-pagination-bullet-active {
+  width: 30px;
+  background-color: #797979;
+}
+
+/* .swiper-button-next {
+  width: 50px;
+  height: 100px;
+  flex-shrink: 0;
+  stroke-width: 1px;
+  color: var(--secondary-color);
+}
+.swiper-button-prev {
+  width: 50px;
+  height: 100px;
+  flex-shrink: 0;
+  stroke-width: 1px;
+  color: var(--secondary-color);
+} */
