--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -26,7 +26,11 @@
       </li>
     </ul>
     <div class="swiper-pagination"></div>
+    <div class="swiper-button-next">
+      <img src="/img/icons/out-team-arrow-next.svg" alt="" />
+    </div>
+    <div class="swiper-button-prev">
+      <img src="/img/icons/out-team-arrow-prev.svg" alt="" />
+    </div>
   </div>
-  <div class="swiper-button-next"></div>
-  <div class="swiper-button-prev"></div>
 </section>
