--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<!-- <button class="button" data-action="open-modal">Відкрити модалку</button> -->
+<button class="button" data-action="open-modal">Відкрити модалку</button>
 
 <div class="backdrop js-backdrop">
   <div class="modal">
@@ -51,8 +51,8 @@
       </li>
     </ul>
 
-    <!-- <button type="button" class="button" data-action="close-modal">
+    <button type="button" class="button" data-action="close-modal">
       Закрити
-    </button> -->
+    </button>
   </div>
 </div>
