--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -27,7 +27,9 @@
         class="footer__input"
         placeholder="Ваша ел. адреса..."
       />
-      <button class="footer__btn">Підписатись</button>
+      <button class="footer__btn" data-action="open-thanks-modal">
+        Підписатись
+      </button>
       <p class="footer__subtitle">
         *Підписавшись, Ви зможете ортимувати інформаццію про новинки на сайті
       </p>
