--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,8 @@
-<button class="button" data-action="open-modal">Відкрити модалку</button>
+<button class="modal__btn-open" data-action="open-modal">
+  Відкрити модалку
+</button>
 
-<!-- <div class="backdrop js-backdrop">
+<div class="backdrop js-backdrop">
   <div class="modal">
     <p class="modal__text backdown">
       Привіт! <br />
@@ -24,35 +26,35 @@
       <li class="modal__item">
         <img
           class="modal__img modal__img-position-1"
-          src="./img/modal/sword.png"
+          src="./img/icons/sword.svg"
           alt="sword"
         />
       </li>
       <li class="modal__item">
         <img
           class="modal__img modal__img-position-2"
-          src="./img/modal/puzzle.png"
+          src="./img/icons/puzzle.svg"
           alt="puzzle"
         />
       </li>
       <li class="modal__item">
         <img
           class="modal__img modal__img-position-3"
-          src="./img/modal/tic-tac-toe.png"
+          src="./img/icons/tic-tac-toe.svg"
           alt="tic tac toe"
         />
       </li>
       <li class="modal__item">
         <img
           class="modal__img modal__img-position-4"
-          src="./img/modal/game-development.png"
+          src="./img/icons/game-development.svg"
           alt="game-development"
         />
       </li>
     </ul>
 
-    <button type="button" class="button" data-action="close-modal">
-      Закрити
+    <button type="button" class="modal__btn-close" data-action="close-modal">
+      <img class="modal__btn-icon" src="/img/icons/cross.svg" alt="" />
     </button>
   </div>
-</div> -->
+</div>
