--- a/src/css/layout/our-team.css
+++ b/src/css/layout/our-team.css
@@ -10,10 +10,13 @@
 }
 
 .out-team__img {
+  width: 150px;
+  height: 150px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
 }
+
 .out-team__name {
   color: var(--secondary-color);
   font-size: 14px;
