--- a/src/css/layout/our-team.css
+++ b/src/css/layout/our-team.css
@@ -12,6 +12,7 @@
 .out-team__img {
   width: 150px;
   height: 150px;
+  border-radius: 20px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
