--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -4,21 +4,21 @@
   <div class="swiper">
     <ul class="out-team__item swiper-wrapper">
       <li class="out-team__item swiper-slide">
-        <img src="./img/our-team/cleo.jpg" alt="" class="out-team__img" />
+        <img src="/img/our-team/cleo.jpg" alt="" class="out-team__img" />
         <p class="out-team__name">Анастасія</p>
         <p class="our-team__information">
           Інформація про роботу, яку він/вона виконав/ла
         </p>
       </li>
       <li class="out-team__item swiper-slide">
-        <img src="./img/our-team/frankie.jpg" alt="" class="out-team__img" />
+        <img src="/img/our-team/frankie.jpg" alt="" class="out-team__img" />
         <p class="out-team__name">Олександра</p>
         <p class="our-team__information">
           Інформація про роботу, яку він/вона виконав/ла
         </p>
       </li>
       <li class="out-team__item swiper-slide">
-        <img src="./img/our-team/clawdeen.jpg" alt="" class="out-team__img" />
+        <img src="/img/our-team/clawdeen.jpg" alt="" class="out-team__img" />
         <p class="out-team__name">Сабіна</p>
         <p class="our-team__information">
           Інформація про роботу, яку він/вона виконав/ла
