--- a/src/css/layout/calculator.css
+++ b/src/css/layout/calculator.css
@@ -101,7 +101,6 @@
   box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.25);
 }
 
-
 .calculator__result {
   outline: none;
   border: none;
@@ -114,9 +113,9 @@
   text-align: center;
   gap: 10px;
   border-radius: 20px;
-  background: #D7D7D7;
+  background: #d7d7d7;
 
-  width: 120px;
+  width: 127px;
   height: 35px;
   color: #7e7e7e;
   font-size: 12px;
