--- a/src/css/layout/calculator.css
+++ b/src/css/layout/calculator.css
@@ -57,6 +57,7 @@
 
   background-color: #000;
   color: var(--main-color);
+  background: var(--secondary-color);
   box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -90,6 +91,7 @@
   border-radius: 20px;
   background-color: #000;
   color: var(--main-color);
+  background: var(--secondary-color);
   box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.25);
 }
 
