section name add

--- a/src/partials/calculator.html
+++ b/src/partials/calculator.html
@@ -1,4 +1,4 @@
-<section>
+<section class="calculator__section">
   <h2 class="title">Калькулятор</h2>
   <div class="calculator__container">
   <input type="number" class="calculator__input" id="first-number" placeholder="Введіть число" />
