--- a/src/partials/time-calculator.html
+++ b/src/partials/time-calculator.html
@@ -1,4 +1,4 @@
-<section>
+<section class="time-calculator__section">
   <h2 class="title">Калькулятор часу</h2>
   <div class="time__calculator__container">
     <div class="time__calculator__div">
