--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -36,11 +36,18 @@ footer .container {
   font-size: 12px;
   line-height: 170%;
   cursor: pointer;
+
+  transition: color 300ms ease-in-out;
+
+  &:hover,
+  &:focus {
+    color: #8acecf;
+  }
 }
 
 .footer__subscribe-container {
   display: flex;
-  width: 347px;
+  width: 350px;
 
   flex-wrap: wrap;
 }
@@ -52,15 +59,19 @@ footer .container {
   gap: 10px;
   border-radius: 20px;
   background: #d7d7d7;
+  color: #7e7e7e;
   font-size: 12px;
-
   width: 204px;
   outline: none;
-  border: none;
+  border: 1.5px solid #d7d7d7;
 
   margin-right: 36px;
 
-  color: #7e7e7e;
+  transition: all 200ms ease-in-out;
+
+  &:focus {
+    border: 1.5px solid #8acecf;
+  }
 }
 
 .footer__btn {
@@ -71,8 +82,16 @@ footer .container {
   align-items: flex-start;
   gap: 10px;
   border-radius: 20px;
-  background: var(--secondary-color);
-  border: none;
+  background-color: var(--secondary-color);
+  border: 1px solid var(--main-color);
+
+  transition: all 300ms ease-in-out;
+
+  &:hover {
+    color: var(--secondary-color);
+    background-color: var(--main-color);
+    border: 1px solid var(--secondary-color);
+  }
 }
 
 .footer__subtitle {
