--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -52,6 +52,12 @@
 .nav__item {
   color: var(--secondary-color);
   font-size: 12px;
+  transition: color 300ms ease-in-out;
+
+  &:hover,
+  &:focus {
+    color: #8acecf;
+  }
 
   &:first-child {
     position: relative;
@@ -63,16 +69,18 @@
 
   &:first-child:hover .submenu__list {
     display: block;
+    color: var(--secondary-color);
   }
 
   &:first-child:hover .arrow {
     transform: rotate(180deg);
+    fill: #8acecf;
   }
 }
 
 .arrow {
   fill: var(--secondary-color);
-  transition: all 200ms ease-in-out;
+  transition: all 300ms ease-in-out;
 
   margin-left: 8px;
 }
@@ -85,7 +93,7 @@
 
 .submenu__list {
   position: absolute;
-  top: 100%;
+  top: 105%;
   display: none;
 
   border-radius: 0px 0px 20px 20px;
@@ -98,10 +106,12 @@
   padding: 10px 40px;
   text-align: center;
   background: var(--main-color);
+  transition: all 200ms ease-in-out;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: #f1f1f1;
-    color: #000;
+    color: #8acecf;
   }
 }
 
@@ -110,7 +120,6 @@
   color: var(--secondary-color);
   text-align: right;
   font-size: 12px;
-
   width: 100px;
 
   margin-left: 51px;
