--- a/src/partials/scientists.html
+++ b/src/partials/scientists.html
@@ -1,46 +1,46 @@
 <section class="scientists__section">
   <h2 class="title">Обери вченого/их</h2>
 
-  <ul class="scientists__list">
-    <li class="scientists__item" id="1">
+  <ul class="scientists__list" id="scientists-list">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="2">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="3">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="4">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="5">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="6">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="7">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="8">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="9">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="10">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="11">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
-    <li class="scientists__item" id="12">
+    <li class="scientists__item">
       <img src="/img/scientists.png" alt="" class="scientists__img" />
     </li>
   </ul>
 
-  <div class="options-container">
+  <div class="options-container" id="options-list">
     <ul class="options-list first-options-list">
       <li>
         <button class="option">Які вчені народилися в 19 ст.</button>
