--- a/src/css/layout/scientists.css
+++ b/src/css/layout/scientists.css
@@ -57,3 +57,46 @@
   justify-content: center;
   align-items: center;
 }
+
+.scientists__item {
+  position: relative;
+  overflow: hidden;
+}
+
+.scientists__img {
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+}
+
+.scientists__box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  background-color: #ffffff75;
+  border-radius: 20px;
+  text-align: center;
+  padding-top: 41px;
+
+  opacity: 0;
+  transition: all 300ms ease-in-out 50ms;
+}
+
+.scientists__fullname,
+.scientists__years {
+  color: #000;
+  text-align: center;
+  font-size: 8px;
+}
+.scientists__fullname {
+  margin-bottom: 3px;
+}
+
+.scientists__item:hover .scientists__box {
+  backdrop-filter: blur(1.2px);
+  opacity: 1;
+  transition: all 300ms ease-in-out 50ms;
+}
