--- a/src/css/layout/football.css
+++ b/src/css/layout/football.css
@@ -1,23 +1,28 @@
 .football__container {
-    width: 720px;
-    height: 220px;
-    flex-shrink: 0;
-    
-    margin-right: auto;
-    margin-left: auto;
+  width: 720px;
+  height: 220px;
 
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
+  margin-right: auto;
+  margin-left: auto;
 
-    border-radius: 37px;
-    border: 2px solid #000;
-    background-color: #5ABB58;
+  position: relative;
+  overflow: hidden;
+
+  cursor: pointer;
+
+  border-radius: 37px;
+  border: 2px solid #000;
+  background-color: #5abb58;
+}
+
+.football__field {
+  width: 100%;
+  height: 100%;
 }
 
 .football__ball {
-    position: absolute;
-    left: 30%;
-    top: 50%;
+  position: absolute;
+  left: 30%;
+  top: 50%;
+  transition: top 0.5s ease-out, left 0.5s ease-out;
 }
-
