--- a/src/partials/football.html
+++ b/src/partials/football.html
@@ -4,7 +4,7 @@
     <div class="football__field" id="field">
       <img
         class="football__ball"
-        src="../img/icons/football-ball.svg"
+        src="/img/icons/football-ball.svg"
         id="ball"
         alt="football ball"
       />
