--- a/src/partials/football.html
+++ b/src/partials/football.html
@@ -4,10 +4,12 @@
     <div class="football__field" id="field">
       <img
         class="football__ball"
-        src="/img/icons/football-ball.svg"
+        src="https://raw.githubusercontent.com/OlaVasylieva7/interactive-games/0f6cb3b4539b0a2569b2cc19f4f9f472f5bb38af/src/img/icons/football-ball.svg"
         id="ball"
         alt="football ball"
       />
     </div>
   </div>
 </section>
+
+<!-- src="/img/icons/football-ball.svg" -->
