rsp.html, guess.js

--- a/src/partials/rsp.html
+++ b/src/partials/rsp.html
@@ -1,27 +1,32 @@
 <section>
-  <div class="rsp_container">
-    <h2 class="title">Камінь - ножиці - папір</h2>
-    <div class="rsp__game">
-      <div class="rsp__image__box">
+  <h2 class="title">Камінь - ножиці - папір</h2>
+
+  <div class="rsp__game">
+    <ul class="rsp__image__list">
+      <li class="rsp__image__item">
         <button type="button" class="rsp__btn">
           <img src="./img/rsp/stone.png" alt="stone" />
         </button>
+      </li>
+      <li class="rsp__image__item">
         <button type="button" class="rsp__btn">
           <img src="./img/rsp/scissors.png" alt="scissors" />
         </button>
+      </li>
+      <li class="rsp__image__item">
         <button type="button" class="rsp__btn">
           <img src="./img/rsp/paper.png" alt="paper" />
         </button>
-      </div>
+      </li>
+    </ul>
 
-      <div class="rsp__counter">
-        <p>Рахунок:</p>
-        <p>Комп’ютер - 0</p>
-        <p>Ви - 0</p>
-      </div>
+    <div class="rsp__counter">
+      <p>Рахунок:</p>
+      <p>Комп’ютер - 0</p>
+      <p>Ви - 0</p>
     </div>
-    <p class="rsp__text">Ви виграли раунд!</p>
-
-    <button type="button" class="srp__comp__btn">Варіант комп’ютера</button>
   </div>
+  <p class="rsp__text">Ви виграли раунд!</p>
+
+  <button type="button" class="srp__comp__btn">Варіант комп’ютера</button>
 </section>
