--- a/src/css/layout/rsp.css
+++ b/src/css/layout/rsp.css
@@ -1,55 +1,45 @@
-.rsp_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  width: 575px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .rsp__game {
   display: flex;
-  flex-direction: row;
-  position: relative;
+  margin-left: 417px;
 }
 
-.rsp__image__box {
+.rsp__image__list {
   display: flex;
   gap: 38px;
+  margin-right: 104px;
+}
+
+.rsp__image__item {
+  border-radius: 20px;
+  background: #000;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .rsp__btn {
-  border-radius: 20px;
-  background: #000;
-  display: inline-flex;
-  padding: 10px;
-  align-items: flex-start;
-  gap: 10px;
+  border: none;
+  background-color: transparent;
 }
 
 .rsp__counter {
-  position: absolute;
-  right: 0;
 }
 
 .rsp__text {
-  color: #039900;
-  font-family: 'Montserrat Alternates';
+  text-align: center;
   font-size: 12px;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
   margin-top: 36px;
   margin-bottom: 36px;
 }
 
 .srp__comp__btn {
-  display: inline-flex;
+  display: block;
   padding: 10px 20px;
-  align-items: flex-start;
-  gap: 10px;
   border-radius: 20px;
   background: #000;
   color: white;
+  margin: 0 auto;
 }
