enter-number.html, js

--- a/src/partials/guess.html
+++ b/src/partials/guess.html
@@ -4,7 +4,7 @@
     <div class="date__div">
       <input
         id="date__input"
-        class="date__input"
+        class="guess__input"
         type="number"
         placeholder="Введіть число"
         data-min-length="1"
