--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,13 +4,13 @@
 @import url('./layout/modal.css');
 @import url('./layout/header.css');
 @import url('./layout/date.css');
-/* @import url('./layout/guess.css'); */
-/* @import url('./layout/rsp.css'); */
+@import url('./layout/guess.css');
+@import url('./layout/rsp.css');
 @import url('./layout/calculator.css');
 @import url('./layout/time-calculator.css');
 /* @import url('./layout/dinosaur.css'); */
 @import url('./layout/football.css');
-/* @import url('./layout/enter-numbers.css'); */
+@import url('./layout/enter-numbers.css');
 @import url('./layout/our-team.css');
 @import url('./layout/scientists.css');
 @import url('./layout/footer.css');
