--- a/src/css/layout/enter-numbers.css
+++ b/src/css/layout/enter-numbers.css
@@ -18,16 +18,15 @@
 
 .enter__number__input {
   width: 140px;
-  padding: 10px 20px 10px 20px;
-  gap: 38px;
+  padding: 10px 20px;
   border-radius: 20px;
   opacity: 0px;
   background-color: #d7d7d7;
-  font-family: Montserrat Alternates;
   font-size: 12px;
   font-weight: 400;
   box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.25);
-  border: 0;
+  border: none;
+  outline: none;
 }
 
 .enter__number__text {
