--- a/src/partials/date.html
+++ b/src/partials/date.html
@@ -11,7 +11,7 @@
 
       <button type="button" class="date__btn">
         <svg class="date__icon">
-          <use href="./img/icons/symbol-defs.svg#icon-dandruff"></use>
+          <use href="/img/icons/symbol-defs.svg#icon-dandruff"></use>
         </svg>
       </button>
     </div>
