--- a/src/partials/enter-numbers.html
+++ b/src/partials/enter-numbers.html
@@ -5,19 +5,19 @@
       <input
         id="one__input"
         class="enter__number__input"
-        type="number"
+        type="text"
         placeholder="Введіть число"
       />
       <input
         id="two__input"
         class="enter__number__input"
-        type="number"
+        type="text"
         placeholder="Введіть число"
       />
       <input
         id="three__input"
         class="enter__number__input"
-        type="number"
+        type="text"
         placeholder="Введіть число"
       />
     </div>
