--- a/src/partials/guess.html
+++ b/src/partials/guess.html
@@ -4,7 +4,7 @@
     <div class="date__div">
       <input
         id="date__input"
-        class="guess__input"
+        class="date__input guess__input"
         type="number"
         placeholder="Введіть число"
         data-min-length="1"
@@ -12,7 +12,7 @@
 
       <button id="date__button" type="button" class="date__btn">
         <svg class="date__icon">
-          <use href="./img/symbol-defs.svg#icon-dandruff"></use>
+          <use href="/img/icons/symbol-defs.svg#icon-dandruff"></use>
         </svg>
       </button>
     </div>
