--- a/src/css/layout/rsp.css
+++ b/src/css/layout/rsp.css
@@ -25,21 +25,27 @@
 }
 
 .rsp__counter {
+  color: var(--secondary-color);
+  font-size: 12px;
+  line-height: 170%;
 }
 
 .rsp__text {
   text-align: center;
   font-size: 12px;
-  font-weight: 400;
+
   margin-top: 36px;
   margin-bottom: 36px;
 }
 
 .srp__comp__btn {
-  display: block;
+  background-color: #000;
   padding: 10px 20px;
-  border-radius: 20px;
-  background: #000;
-  color: white;
+
+  display: block;
   margin: 0 auto;
+  color: #fff;
+  font-size: 12px;
+  border: 1px solid var(--main-color);
+  border-radius: 20px;
 }
