--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,3 @@
-<button class="modal__btn-open" data-action="open-modal">
-  Відкрити модалку
-</button>
-
 <div class="backdrop js-backdrop">
   <div class="modal">
     <p class="modal__text backdown">
@@ -24,29 +20,21 @@
 
     <ul class="modal__list">
       <li class="modal__item">
-        <img
-          class="modal__img modal__img-position-1"
-          src="./img/icons/sword.svg"
-          alt="sword"
-        />
+        <img class="modal__img" src="./img/icons/sword.svg" alt="sword" />
+      </li>
+      <li class="modal__item">
+        <img class="modal__img" src="./img/icons/puzzle.svg" alt="puzzle" />
       </li>
       <li class="modal__item">
         <img
-          class="modal__img modal__img-position-2"
-          src="./img/icons/puzzle.svg"
-          alt="puzzle"
-        />
-      </li>
-      <li class="modal__item">
-        <img
-          class="modal__img modal__img-position-3"
+          class="thaks-modal__img"
           src="./img/icons/tic-tac-toe.svg"
           alt="tic tac toe"
         />
       </li>
       <li class="modal__item">
         <img
-          class="modal__img modal__img-position-4"
+          class="modal__img"
           src="./img/icons/game-development.svg"
           alt="game-development"
         />
