--- a/src/partials/thanks-modal.html
+++ b/src/partials/thanks-modal.html
@@ -3,31 +3,23 @@
     <p class="thanks__title">Дякую за підписку!</p>
 
     <ul class="modal__list">
-      <li class="modal__item">
-        <img
-          class="modal__img modal__img-position-1"
-          src="./img/icons/sword.svg"
-          alt="sword"
-        />
+      <li class="thanks-modal__item">
+        <img class="modal__img" src="/img/modal/sword.svg" alt="sword" />
       </li>
-      <li class="modal__item">
-        <img
-          class="modal__img modal__img-position-2"
-          src="./img/icons/puzzle.svg"
-          alt="puzzle"
-        />
+      <li class="thanks-modal__item">
+        <img class="modal__img" src="/img/modal/puzzle.svg" alt="puzzle" />
       </li>
-      <li class="modal__item">
+      <li class="thanks-modal__item">
         <img
-          class="modal__img modal__img-position-3"
-          src="./img/icons/tic-tac-toe.svg"
+          class="modal__img"
+          src="/img/modal/tic-tac-toe.svg"
           alt="tic tac toe"
         />
       </li>
-      <li class="modal__item">
+      <li class="thanks-modal__item">
         <img
-          class="modal__img modal__img-position-4"
-          src="./img/icons/game-development.svg"
+          class="modal__img"
+          src="./img/modal/game-development.svg"
           alt="game-development"
         />
       </li>
