--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,7 @@
 @import url('./layout/our-team.css');
 @import url('./layout/scientists.css');
 @import url('./layout/footer.css');
+@import url('./layout/thanks-modal.css');
 
 :root {
   font-family: 'Montserrat Alternates', sans-serif;
