add header filter

--- a/src/partials/dinosaur.html
+++ b/src/partials/dinosaur.html
@@ -1,4 +1,5 @@
-<section>
+<section class="game">
   <h2 class="title">Google динозавр</h2>
   <div class="dino_container"></div>
+  <hr />
 </section>
