--- a/src/partials/enter-numbers.html
+++ b/src/partials/enter-numbers.html
@@ -1,4 +1,4 @@
-<section>
+<section class="numerical">
   <h2 class="title">Введіть 3 числа</h2>
   <div class="enter__number_container">
     <div class="enter__number__div">
@@ -23,4 +23,5 @@
     </div>
     <p class="enter__number__text">Найбільше число, яке ви ввели - (число)</p>
   </div>
+  <hr />
 </section>
