--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,13 +24,15 @@
 
           <ul class="submenu__list">
             <li class="submenu__item">
-              <a href="" class="submenu__link">Числовий</a>
+              <a href="" class="submenu__link" data-id="numerical">Числовий</a>
             </li>
             <li class="submenu__item">
-              <a href="" class="submenu__link">Ігровий</a>
+              <a href="" class="submenu__link" data-id="game">Ігровий</a>
             </li>
             <li class="submenu__item">
-              <a href="" class="submenu__link">Ознайомчий</a>
+              <a href="" class="submenu__link" data-id="acquaintance"
+                >Ознайомчий</a
+              >
             </li>
           </ul>
         </li>
