--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -1,4 +1,4 @@
-<section class="out-team__section" id="our-team">
+<section class="out-team__section acquaintance" id="our-team">
   <h2 class="title">Наша команда</h2>
 
   <div class="swiper">
@@ -33,4 +33,5 @@
       <img src="/img/icons/out-team-arrow-prev.svg" alt="" />
     </div>
   </div>
+  <hr />
 </section>
