--- a/src/partials/scientists.html
+++ b/src/partials/scientists.html
@@ -1,4 +1,4 @@
-<section class="scientists__section">
+<section class="scientists__section acquaintance">
   <h2 class="title">Обери вченого/их</h2>
 
   <ul class="scientists__list" id="scientists-list">
