--- a/src/partials/time-calculator.html
+++ b/src/partials/time-calculator.html
@@ -1,4 +1,4 @@
-<section class="time-calculator__section">
+<section class="time-calculator__section numerical">
   <h2 class="title">Калькулятор часу</h2>
   <div class="time__calculator__container">
     <div class="time__calculator__div">
@@ -20,4 +20,5 @@
       Введіть число
     </p>
   </div>
+  <hr />
 </section>
