--- a/src/partials/calculator.html
+++ b/src/partials/calculator.html
@@ -1,28 +1,57 @@
-<section class="calculator__section">
+<section class="calculator__section numerical">
   <h2 class="title">Калькулятор</h2>
   <div class="calculator__container">
-  <input type="number" class="calculator__input" id="first-number" placeholder="Введіть число" />
-  <div class="calculator__operators">
-    <input type="radio" class="calculator__operator" name="operator" id="addition" value="+" /><label
-      for="addition"
-      required
-      ><span>+</span>
-    </label>
-    <input type="radio" class="calculator__operator" name="operator" id="subtraction" value="-" /><label
-      for="subtraction"
-      ><span>-</span></label
+    <input
+      type="number"
+      class="calculator__input"
+      id="first-number"
+      placeholder="Введіть число"
+    />
+    <div class="calculator__operators">
+      <input
+        type="radio"
+        class="calculator__operator"
+        name="operator"
+        id="addition"
+        value="+"
+      /><label for="addition" required><span>+</span> </label>
+      <input
+        type="radio"
+        class="calculator__operator"
+        name="operator"
+        id="subtraction"
+        value="-"
+      /><label for="subtraction"><span>-</span></label>
+      <input
+        type="radio"
+        class="calculator__operator"
+        name="operator"
+        id="multiplication"
+        value="*"
+      /><label for="multiplication"><span>*</span></label>
+      <input
+        type="radio"
+        class="calculator__operator"
+        name="operator"
+        id="division"
+        value="/"
+      /><label for="division"><span>/</span></label>
+    </div>
+    <input
+      type="number"
+      class="calculator__input"
+      id="second-number"
+      placeholder="Введіть число"
+    />
+    <button
+      type="button"
+      class="calculator__convert__btn"
+      id="button-result"
+      disabled
     >
-    <input type="radio" class="calculator__operator" name="operator" id="multiplication" value="*" /><label
-      for="multiplication"
-      ><span>*</span></label
-    >
-    <input type="radio" class="calculator__operator" name="operator" id="division" value="/" /><label
-      for="division"
-      ><span>/</span></label
-    >
+      <span>=</span>
+    </button>
+    <p class="calculator__result" id="calculator-result">Результат</p>
   </div>
-  <input type="number" class="calculator__input" id="second-number" placeholder="Введіть число" />
-  <button type="button" class="calculator__convert__btn" id="button-result" disabled><span>=</span></button>
-  <p class="calculator__result" id="calculator-result" >Результат</p>
-</div>
+  <hr />
 </section>
