--- a/src/partials/date.html
+++ b/src/partials/date.html
@@ -1,4 +1,4 @@
-<section>
+<section class="numerical">
   <h2 class="title">Перевір в який рік ти народився</h2>
   <div class="date_container">
     <div class="date__div">
@@ -18,4 +18,5 @@
 
     <p class="date__text"></p>
   </div>
+  <hr />
 </section>
