--- a/src/partials/football.html
+++ b/src/partials/football.html
@@ -1,4 +1,4 @@
-<section class="football__section">
+<section class="football__section game">
   <h2 class="title">Футбол</h2>
   <div class="football__container">
     <div class="football__field" id="field">
@@ -10,6 +10,5 @@
       />
     </div>
   </div>
+  <hr />
 </section>
-
-<!-- src="/img/icons/football-ball.svg" -->
