--- a/src/partials/guess.html
+++ b/src/partials/guess.html
@@ -1,4 +1,4 @@
-<section>
+<section class="numerical">
   <h2 class="title">Вгадай число, яке загадав комп’ютер</h2>
   <div class="date_container">
     <div class="date__div">
@@ -19,4 +19,5 @@
 
     <p id="text" class="date__text">Введіть число від 1 до 10</p>
   </div>
+  <hr />
 </section>
