--- a/src/partials/rsp.html
+++ b/src/partials/rsp.html
@@ -1,4 +1,4 @@
-<section>
+<section class="game">
   <h2 class="title">Камінь - ножиці - папір</h2>
 
   <div class="rsp__game">
@@ -31,4 +31,5 @@
   <button id="comp__button" type="button" class="srp__comp__btn">
     Варіант комп’ютера
   </button>
+  <hr />
 </section>
