--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer id="footer">
   <div class="container">
     <a href="" class="logo">
       <div class="logo__container footer__logo">
