--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,8 +36,8 @@
             </li>
           </ul>
         </li>
-        <li class="nav__item"><a href="">Наша команда</a></li>
-        <li class="nav__item"><a href="">Контакти</a></li>
+        <li class="nav__item"><a href="#our-team">Наша команда</a></li>
+        <li class="nav__item"><a href="#footer">Контакти</a></li>
       </ul>
 
       <img
