--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@
 @import url('./layout/rsp.css');
 @import url('./layout/calculator.css');
 @import url('./layout/time-calculator.css');
-/* @import url('./layout/dinosaur.css'); */
+@import url('./layout/dinosaur.css');
 @import url('./layout/football.css');
 @import url('./layout/enter-numbers.css');
 @import url('./layout/our-team.css');
