--- a/src/partials/dinosaur.html
+++ b/src/partials/dinosaur.html
@@ -1,5 +1,17 @@
-<section class="game">
+<section class="dino__section">
   <h2 class="title">Google динозавр</h2>
-  <div class="dino_container"></div>
+  <div class="dino__container">
+    <div id="game" class="dino__game">
+      <div id="score" class="score">0</div>
+      <div id="start-message" class="start-message">Press any key to start</div>
+      <img src="../img/dino/ground.png" class="ground" />
+      <img src="../img/dino/ground.png" class="ground" />
+      <img src="../img/dino/dino-stationary.png" id="dino" class="dino" />
+      <div id="gameover-message" class="gameover-message hide">
+        <p>Game over</p>
+        <span>Press any key to restart</span>
+      </div>
+    </div>
+  </div>
   <hr />
 </section>
